--- a/src/pages/ClientPage.css
+++ b/src/pages/ClientPage.css
@@ -64,7 +64,7 @@
 .hero-section {
   width: 100%;
   height: 38vh; 
-  background-image: url("../assets/images/clientheroBg.png");
+  background-image: url("../assets/clientheroBg.png");
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
@@ -235,6 +235,7 @@
   font-size: 26px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.22);
   cursor: pointer;
+  transition: 0.25s ease;
 }
 
 .client-info-card {
@@ -302,4 +303,28 @@
   .client-info-grid {
     grid-template-columns: 1fr;
   }
+}
+
+.home-btn {
+  position: fixed;
+  bottom: 75px;
+  right: 10px;
+  width: 55px;
+  height: 55px;
+  background: #1b4f92; /* اللون اللي يناسب تصميمك */
+  color: white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 22px;
+  box-shadow: 0px 4px 12px rgba(0,0,0,0.25);
+  text-decoration: none;
+  transition: 0.25s ease;
+  z-index: 10;
+}
+.scroll-top-btn:hover,
+.home-btn:hover {
+  background: #22af0c;
+  transform: translateY(-3px);
 }
