--- a/src/pages/Client/ClientPage.css
+++ b/src/pages/Client/ClientPage.css
@@ -1,14 +1,14 @@
+html{
+  overflow-x: hidden;
+}
 .page-wrapper {
   width: 100%;
   background: #ebc36ccf;
   text-align: center;
-  font-family: "Cairo", sans-serif;
 }
 
 .header {
   padding: 12px 18px;
-  display: flex;
-  align-items: center;
   gap: 10px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.08);
   position: fixed;
@@ -146,7 +146,8 @@
 .hero-section {
   width: 100%;
   height: 38vh; 
-  background-image: url("../assets/clientheroBg.png");
+background-image: url("../../assets/clientheroBg.png");
+
   background-size: cover;
   background-position: center top;
   background-repeat: no-repeat;
