--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -23,7 +23,7 @@ html, body, #root {
   background-position: top center;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  filter: blur(8px);
+  /* filter: blur(8px); */
   transform: scale(1.05);
   z-index: -2;
   animation: fadeBg 3s ease-out forwards;
