--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -17,7 +17,7 @@ html {
   direction: ltr;
 } */
 .container {
-  background: rgba(255, 255, 255, 0.55);
+  /* background: rgba(255, 255, 255, 0.55); */
   backdrop-filter: blur(10px);
   padding: 25px;
   border-radius: 18px;
